nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # Tambahan opsional untuk HAProxy
    haproxy.org/path-rewrite: /    # contoh rewrite sederhana
spec:
  ingressClassName: haproxy
  rules:
  - host: app.341221861012.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
